<resources>
    <string name="app_name" translatable="false">Workhard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tree_points">…</string>

    <!-- Actions -->
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
...
    <string name="error_network_code_general">General error</string>
    <string name="error_network_no_internet_connection">No Internet Connection.</string>
    <string name="error_create_workout_name_not_empty">Name of workout can not by empty</string>
    <string name="error_create_workout_min">Name workout need min 4 characters</string>

    <!-- Login Fragment -->
    <string name="frg_login_login">Login</string>
    <string name="frg_login_email">Email</string>
    <string name="frg_login_password">Password</string>
    <string name="frg_login_sing_up">Sing Up</string>
    <string name="frg_login_sing_in">Sing in</string>
    <string name="frg_login_forgot_password">forgot password</string>
    <string name="frg_login_loading_login">Login …</string>
...
