...
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bTFrgLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frg_login_login" />

            <TextView
                android:id="@+id/tVFrgLoginSingUp"
...
